Completed basic Etch-a-Sketch project

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -8,6 +8,8 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
-    
+    <h1>Etch-a-Sketch</h1>
+    <button>Change Number of Squares in Grid</button>
+    <div id="container"></div>
 </body>
 </html>
